ajout ogcapi
